--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: check
-description: Check is an essential tool for developers aiming to maintain the quality and organization of their software projects. This software automatically scans the source code for comments containing the terms "check", "todo", or "fix".
+name: code_guard
+description: Code Guard is an essential tool for developers aiming to maintain the quality and organization of their software projects. This software automatically scans the source code for comments containing the terms "check", "todo", or "fix".
 version: 0.0.1
 repository: https://github.com/Jeilson-Dev/code_guard
 
